# loto

./: CMakeLists.txt  Card.cpp  Card.h  MainWindow.cpp  MainWindow.h  MyButton.cpp  MyButton.h  card01.txt  card02.txt  card03.txt  card04.txt  card05.txt  card06.txt  main.cpp
